@@ -203,8 +203,12 @@ start_parser(Options) ->
 %% @see start_parser/0. `start_parser/0' for an example
 
 stop_parser(#xml_parser{port = Port} = _Parser) ->
-	port_close(Port),
-	erl_ddll:unload_driver(?DRIVER_NAME).
+	case catch port_close(Port) of
+		{'EXIT', Reason} ->
+			{error, {port_close_failed, Reason}};
+		_ ->
+			erl_ddll:unload_driver(?DRIVER_NAME)
+	end.
 
 %% @spec (Parser, Data) -> {ok, [XML_Element]} | {ok, continue} | {error, Reason}
 %%     Parser = xmlparser()
